--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@ button {
     color: inherit;
 }
 
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     color: #fff;
@@ -92,7 +95,7 @@ a.menu-list:hover {
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
-    padding:10px 10px;
+    padding: 10px 10px;
 }
 
 .call {
@@ -137,7 +140,7 @@ a.menu-list:hover {
     content: '';
     width: 35px;
     height: 35px;
-    top: -9px;
+    top: -3px;
     left: -36px;
 }
 
@@ -186,8 +189,8 @@ a.menu-list:hover {
 }
 
 .dropdown-toggle:hover {
-  background-color: #001427;
-  transition: all .3s ease-in-out;
+    background-color: #001427;
+    transition: all .3s ease-in-out;
 }
 
 ul.dropdown li {
@@ -340,6 +343,7 @@ ul.dropdown li a:hover {
     max-width: 100%;
     margin: 0 auto;
 }
+
 .text-wrapper {
     padding: 40px 0;
     margin: 20px;
@@ -371,6 +375,7 @@ ul.dropdown li a:hover {
     margin-bottom: 10px;
 }
 
+
 .text-link {
     color: #001427;
     font-size: 16px;
@@ -389,6 +394,7 @@ ul.dropdown li a:hover {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 30px;
+    line-height: 1;
     color: #000
 }
 
@@ -396,11 +402,107 @@ ul.dropdown li a:hover {
     max-width: 50%;
     padding: 20px;
 }
+
 .download-document {
     text-decoration: underline;
     color: #8d0801;
 }
 
+.reqvisits-text {
+    color: #001427;
+    font-size: 18px;
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
+.reqvisits-modal {
+    position: relative
+}
+
+.reqvisits-close {
+    color: #001427;
+    font-size: 30px;
+    position: relative;
+    bottom: 12px;
+    left: 294px;
+
+}
+
+.reqvisits-wrapper {
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    padding: 20px;
+    width: 360px;
+    margin-left: -200px;
+    background: #fff;
+    border: 1px solid orange;
+    border-radius: 4px;
+    z-index: 99999;
+    opacity: 1;
+}
+
+.wrapper-plan {
+    padding: 25px 0 25px;
+    display: flex;
+}
+
+.photo-wrapper {
+    text-align: center;
+}
+
+.photo-item {
+    margin-bottom: 20px;
+}
+
+.footer {
+    padding: 50px 0 50px;
+    background-color: #708d81;
+}
+
+.footer-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    flex-wrap: wrap;
+}
+
+.footer-menu {
+    display: flex;
+}
+
+.footer-link {
+    color: white;
+    line-height: 2;
+    font-size: 18px;
+}
+
+.footer-link:hover {
+    color: #f4d58d;
+    transition: all .3s ease-in-out;
+    border-bottom: 1px solid #f4d58d;
+}
+
+.footer-email,
+.time-work{
+    color: white;
+}
+.footer-item {
+    padding: 10px;
+}
+
+.reqvisits-footer {
+    color: #8d0801;
+    background-color: #f4d58d;
+    padding: 16px 40px;
+    font-size: 20px;
+}
 
 @media (max-width: 1020px) {
     .post-wrapper {
@@ -417,13 +519,16 @@ ul.dropdown li a:hover {
         font-size: 30px;
 
     }
+
     .header-contact {
         flex-direction: column;
     }
+
     .mobile {
         font-size: 18px;
         margin-bottom: 25px;
     }
+
     .contact-telegram {
         font-size: 14px;
     }
@@ -433,16 +538,20 @@ ul.dropdown li a:hover {
     .logo {
         display: none;
     }
+
     .logo-mobile {
         width: 30px;
         display: block;
     }
+
     .header-contact {
         display: none;
     }
+
     .header-nav {
         display: none;
     }
+
     .header-top {
         align-items: center;
         padding: 20px 0 20px;
@@ -459,11 +568,13 @@ ul.dropdown li a:hover {
     .menu {
         display: block;
     }
+
     .burger {
         padding: 10px;
         border: none;
         background-color: transparent;
     }
+
     .menu {
         height: 70%;
         width: 50%;
@@ -472,11 +583,13 @@ ul.dropdown li a:hover {
         display: none;
         text-align: end;
     }
+
     .menu li {
         padding-bottom: 13px;
         text-decoration: none;
         list-style-type: none;
     }
+
     .menu li a {
         padding-top: 20px;
         text-decoration: none;
@@ -484,9 +597,11 @@ ul.dropdown li a:hover {
         font-weight: 500;
         font-size: 20px;
     }
+
     .bar {
         transition: 0.4s;
     }
+
     .bar-1,
     .bar-2,
     .bar-3 {
@@ -497,13 +612,16 @@ ul.dropdown li a:hover {
         cursor: pointer;
         transition: 0.4s;
     }
+
     .change .bar-1 {
         -webkit-transform: rotate(-45deg) translate(-10px, 5px);
         transform: rotate(-45deg) translate(-5px, 6px)
     }
+
     .change .bar-2 {
         opacity: 0;
     }
+
     .change .bar-3 {
         -webkit-transform: rotate(45deg) translate(-10px, 5px);
         transform: rotate(45deg) translate(-10px, -5px);
@@ -512,13 +630,16 @@ ul.dropdown li a:hover {
     .mobile {
         font-size: 20px;
     }
+
     .contact-telegram {
         font-size: 16px;
     }
+
     .mobile,
     .contact-telegram {
         display: none;
     }
+
     .call-phone {
         border: 2px solid #708D81;
         padding: 13px 2px 12px 67px;
@@ -538,13 +659,16 @@ ul.dropdown li a:hover {
         left: 17px;
         top: -2px;
     }
+
     .post-description {
-      padding: 0px 20px 5px 20px;
+        padding: 0px 20px 5px 20px;
     }
+
     .post-img {
         max-width: 50%;
         padding: 20px;
     }
+
     .user-wrapper {
         position: relative;
         height: auto;
@@ -555,6 +679,7 @@ ul.dropdown li a:hover {
         margin-bottom: 20px;
         background: #cccccc;
     }
+
     .header-top-wrapper {
         justify-content: center;
     }
@@ -562,13 +687,25 @@ ul.dropdown li a:hover {
     .to-main {
         margin-bottom: 20px;
     }
+
     .reqvisits {
         padding: 15px 50px;
         font-size: 16px;
         margin-top: 23px;
     }
+
     .user-title {
         font-size: 25px;
+    }
+
+    .text-ustav {
+        padding: 5px 0 5px;
+        margin: 10px 20px;
+    }
+
+    .subtitle {
+        padding: 16px 16px 16px;
+        font-size: 16px;
     }
 }
 
@@ -577,38 +714,55 @@ ul.dropdown li a:hover {
         padding: 12px 40px;
         font-size: 16px;
     }
+
     .call-phone {
-      padding: 10px 10px 11px 36px;
+        padding: 10px 10px 11px 36px;
     }
+
     .title {
-      font-size: 30px;
-      padding: 35px 0 44px;
+        font-size: 30px;
+        padding: 35px 0 44px;
     }
+
     .call-phone::after {
         left: 9px;
         top: -3px;
     }
+
     .slider-box {
         padding-top: 0;
     }
+
     .slick-dots {
         display: none;
     }
+
     .post-title {
         font-size: 25px;
     }
-    
+    .reqvisits-wrapper {
+         top: 20%;
+         left: 55%;
+         width: 360px;
+         margin-left: -200px;
+     }
+    .reqvisits-close {
+        font-size: 42px;
+    }
+
 }
 
 @media (max-width: 320px) {
     .header-bottom {
         flex-direction: column;
         justify-content: space-between;
-        padding-top: 40px;
+        padding-top: 35px;
     }
+
     .call {
         margin-bottom: 20px;
     }
+
     .call-phone {
         padding: 10px 13px 11px 36px;
         margin-right: 0;
@@ -618,20 +772,44 @@ ul.dropdown li a:hover {
         left: 10px;
         top: -3px;
     }
+
     .slider-box {
-      padding-top: 0;
+        padding-top: 0;
     }
 
     .slick-dots {
-      display: none;
+        display: none;
     }
+
     .user-title {
         font-family: 'Montserrat', sans-serif;
         font-size: 22px;
         color: #000
     }
+
     .title {
-        padding: 12px 0 33px;
+        padding: 25px 0 25px;
+        font-size: 22px;
+    }
+    .reqvisits-wrapper {
+        position: fixed;
+        top: 7%;
+        left: 67%;
+        padding: 20px;
+        width: 294px;
+        margin-left: -200px;
+        background: #fff;
+        border: 1px solid orange;
+        border-radius: 4px;
+        z-index: 99999;
+        opacity: 1;
+    }
+    .reqvisits-close {
+        color: #001427;
+        font-size: 47px;
+        position: relative;
+        bottom: 17px;
+        left: 222px;
     }
 }
 
@@ -641,6 +819,7 @@ ul.dropdown li a:hover {
         margin-top: -39px;
         margin-left: -7px;
     }
+
     .slick-dots {
         display: none;
     }
